# awesome-smoke-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: arch-build.yml  windows-build.yml
app/: CMakeLists.txt  app.cpp  app.ixx  field_ops.cu  main.cpp  stable_simulation.cpp  stable_simulation.hpp
app/shaders/: smoke_volume.slang
